@@ -102,4 +102,4 @@ program.
 
 Ideas, questions, patches and bug reports
 -----------------------------------------
-Dimitar Toshkov Zhekov <jimmy@is-vn.bg>
+Dimitar Zhekov <dimitar.zhekov@gmail.com>
